--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -1,11 +1,10 @@
 body{
     text-align:center;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
-    top:0;
-    bottom:0;
-    margin:5px 5px 5px 5px;
+    margin: 0;
     height: 100%;
     width: 100%;
+    overflow: hidden;
 }
 
 html{
@@ -135,7 +134,7 @@ dl.citelist dd {
 }
 
 #header{
-    height:100px;
+    height: 10%;
     background-color:#bf0a00;
     color: #FFFFFF;
     margin:0;
@@ -185,7 +184,7 @@ dl.citelist dd {
 
 #main{
     width: 100%;
-    height: 80%;
+    height: 85%;
 }
 
 #navPane{
@@ -212,7 +211,7 @@ dl.citelist dd {
 }
 
 #footer{
-    height:50px;
+    height: 5%;
     width: 100%;
     float: left;
     background: #bf0a00;
