--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -13,10 +13,11 @@ html{
     margin: 0;
 }
 
-div {
+/* Doing this screws with every other div :(  */
+/* div {
     height: 100%;
     width: 100%;
-}
+} */
 
 a {
     color: #000000;
@@ -153,8 +154,8 @@ dl.citelist dd {
 
 #contentPane{
 	height: 100%;
-    width: 80%;
-    float: right;
+    /* width: 80%;
+    float: right;  this breaks stuff too */
     background: #e1e1e1;
     border-top:#FFFFFF 2px solid;
     margin:0;
@@ -163,9 +164,10 @@ dl.citelist dd {
 }
 
 #content{
-    #scroll-snap-margin-right:15px;
+	height: 100%;
+    /* scroll-snap-margin-right:15px;
     margin-right:15px;
-    #margin-left:15px;
+    margin-left:15px; */
     overflow-y: scroll;
 }
 
@@ -202,7 +204,13 @@ dl.citelist dd {
 
 #nav{
     margin:15px;
+	height: 100%;
 }
+
+a.content-sublink {
+	font-size: initial;
+}
+
 
 #navFull{
     height:50px;
