--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -1,24 +1,21 @@
-body{
+body {
     text-align:center;
     font-family: "Helvetica Neue", Helvetica, sans-serif;
     margin: 0;
     height: 100%;
     width: 100%;
-	overflow: hidden;
+    overflow: hidden;
+    background-color: #bf0a00
 }
 
-html{
+html {
     height: 100%;
     width: 100%;
     margin: 0;
 }
 
-pre{
+pre {
     margin: -15px 0 0 0;
-}
-
-img {
-    margin-left: 25px;
 }
 
 a {
@@ -31,6 +28,12 @@ a:hover {
 
 dt {
     font-weight: bold;
+    display: inline;
+    padding-top: 0px !important;
+}
+
+dd {
+    display: inline;
 }
 
 .memproto, dl.reflist dt {
@@ -92,13 +95,11 @@ dl.reflist dd {
     padding: 5px;
 }
 
-dl
-{
+dl {
     padding: 0 0 0 10px;
 }
 
-dl.section
-{
+dl.section {
     margin-left: 0px;
     padding-left: 0px;
 }
@@ -143,21 +144,26 @@ dl.citelist dd {
 }
 
 #header{
-    height: 10%;
     background-color:#bf0a00;
     color: #FFFFFF;
-    margin:0;
-    padding:0;
+    margin:0px;
+    padding: 15px 5px;
 }
 
 #header h1{
     margin:0;
     padding:10px;
+	display:inline-block;
 }
 
 #header h1 a{
     color:#000000;
     background-color:#F3F2ED;
+}
+
+#header div {
+	vertical-align: middle;
+	display: table-cell;
 }
 
 #contentPane{
@@ -177,6 +183,14 @@ dl.citelist dd {
     margin-right:15px;
     margin-left:15px; */
     overflow-y: scroll;
+}
+
+#content img {
+    margin-left: 25px;
+}
+
+#seal {
+    
 }
 
 #content div {
@@ -236,13 +250,4 @@ a.content-sublink {
     border-top:#FFFFFF 2px solid;
     margin:0;
     padding:0;
-}
-
-dt {
-	display: inline;
-	padding-top: 0px !important;
-}
-
-dd {
-	display: inline;
 }
