--- a/docs/stylesheet.css
+++ b/docs/stylesheet.css
@@ -36,6 +36,18 @@ dd {
     display: inline;
 }
 
+table {
+    border: 1px solid black;
+    padding: 0px;
+    margin: 0px;
+    border-collapse: collapse;
+}
+
+td {
+    border: 1px solid #bf0a00;
+    padding: 5px;
+}
+
 .memproto, dl.reflist dt {
     border-top: 1px solid #A8B8D9;
     border-left: 1px solid #A8B8D9;
